# django-s3-static.py

./: README.md  requirements.txt  setup.cfg  setup.py
django_s3_static/: __init__.py  utils.py
django_s3_static/management/commands/: s3-static-create.py  s3-static-sync.py  s3_static_create.py  s3_static_sync.py
