# https://pypi.org/project/setupcfg-generator/
[metadata]
name = django-s3-static
version = 2019.7.24
url = https://github.com/looking-for-a-job/django-s3-static.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = django aws s3

[options]
install_requires = 
	Django>1.0
	awscli
	setuptools
	temp
packages = 
	django_s3_static
	django_s3_static.management
	django_s3_static.management.commands
